# X.X.X
  - Add encoding to JSON (https://developers.google.com/protocol-buffers/docs/proto3#json)
  - Fix decoding of fixed32 and fixed64 values (detected using JSON conformance tests)

# 1.5.1
  - Fix handling of multiple import paths (thanks to https://github.com/zolakeith)

# 1.5.0
  - Allow multiple import paths (thanks to https://github.com/cheng81)

* 1.4.0
  - Add support of proto3 optional fields (thanks to https://github.com/sneako)

* 1.3.2
  - Bump version to build doc using ex_doc 0.24

* 1.3.1
  - Fix table of types mapping in documentation

* 1.3.0
  - Allow namespaces through protox.generate (thanks to https://github.com/sdrew)
  - Expand output path when generating files
  - More thorough testing of code generation

* 1.2.4
  - Fix warning when compiling generated code (thanks to https://github.com/xinz)
  - Format generated code
  - Fix warning about unused variable in generated code when encoding an empty protobuf message

* 1.2.3
  - Update documentation to better explain the package directive usage

* 1.2.2
  - Enable listing of task protox.generate via mix help.

* 1.2.1
  - Add --keep-unknown-fields option to configure support of unknown fields when generating files

* 1.2.0
  - Add keep_unknown_fields option to configure support of unknown fields

* 1.1.1
  - Fix documentation links

* 1.1.0
  - Add ability to generate one file per protobuf message to speed up compilation (thanks to https://github.com/qgau)

* 1.0.0
  - Use Protox exceptions as errors codes

* 0.25.0
  - Add mix task to generate files
  - Bump to Elixir 1.7 as minimal supported version

* 0.24.0
  - Usage of @external_resource is no longer necessary

* 0.23.1
  - Fix parse of [packed=false] option (the serialization was still correct,
    but not in compliance with Protobuf conformance checker recommandations)

* 0.23.0
  - [Breaking change] encode/1 returns a tuple, use encode!/1 to get the old
    behavior of encode/1