@@ -1,6 +1,8 @@
 # X.X.X
   - Add encoding to JSON (https://developers.google.com/protocol-buffers/docs/proto3#json)
   - Fix decoding of fixed32 and fixed64 values (detected using JSON conformance tests)
+  - Deprecate Protox.Encode.encode/1 and Protox.Encode.encode!/1; use Protox.encode/1 and Protox.encode!/1 instead
+  - Deprecate generated defs()/0 and defs_by_name()/0; use generated fields()/0 instead
 
 # 1.5.1
   - Fix handling of multiple import paths (thanks to https://github.com/zolakeith)
